# tna-frontend-jinja

./: .eslintrc.js  .gitignore  .prettierignore  .tna-frontend-version  CHANGELOG.md  Dockerfile  LICENCE  README.md  django.Dockerfile  docker-compose.yml  flask.Dockerfile  hatch_build.py  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  setup.py  test-fixtures.mjs
.github/: get-release-notes.sh
.github/workflows/: ci.yml  deploy-docs.yml  python-publish.yml  test-publish.yml
app/: __init__.py
app/components/: __init__.py  routes.py
app/components/test-templates/: card.html  cookie-banner.html  filters.html  header.html  hero.html  message.html  phase-banner.html  sensitive-image.html  skip-link.html
app/templates/: breadcrumbs.html  button.html  card.html  cookie-banner.html  filters.html  footer.html  grid.html  header.html  hero.html  index-grid.html  message.html  phase-banner.html  picture.html  sensitive-image.html  skip-link.html  tabs.html
app/templates/components/: cookie-banner.html  filters.html  grid.html  index-grid.html  message.html  phase-banner.html
docs/: components.md  index.md
docs/wtforms/: field-widgets.md  index.md  tna-fields.md  tna-validators.md
tasks/: test.mjs
templates/components/button/: macro.html
templates/components/card/: macro.html
templates/components/cookie-banner/: macro.html
templates/components/footer/: macro.html
templates/components/header/: macro.html
templates/components/hero/: macro.html
templates/components/picture/: macro.html
templates/components/skip-link/: macro.html
templates/components/tabs/: macro.html
templates/layouts/: generic.html
test/: Dockerfile  __init__.py  pyproject.toml  test-fixtures.mjs
test/app/: __init__.py
test/app/components/: __init__.py  routes.py
test/app/components/test-templates/: button.html  checkboxes.html  compound-filters.html  date-search.html  details.html  error-summary.html  featured-records.html  files.html  footer.html  gallery.html  global-header.html  grid.html  pagination.html  search-filters.html  select.html  text-input.html  warning.html
test/app/forms/: routes.py
test/app/layouts/: __init__.py  routes.py
test/app/templates/: __init__.py  routes.py
test/app/utilities/: __init__.py  routes.py
test/components/: __init__.py  routes.py
test/components/test-templates/: accordion.html  breadcrumbs.html  date-input.html  files-list.html  index-grid.html  picture.html  quick-filters.html  radios.html  records-list.html  search-field.html  sidebar.html  tabs.html  textarea.html
test/django/: Dockerfile  pyproject.toml  settings.py  urls.py  views.py  wsgi.py
test/django/app/: forms.py  settings.py  urls.py  views.py
test/django/app/templates/: example-form.html
test/django/templates/: example-form.html
test/flask/: Dockerfile  __init__.py  pyproject.toml
test/flask/app/: __init__.py
test/flask/app/components/: __init__.py  routes.py
test/flask/app/forms/: __init__.py  forms.py  routes.py
test/flask/app/forms/templates/: base.html  checkbox.html  csrf_error.html  date-input-month.html  date-input-progressive.html  date-input-year.html  date-input.html  index.html  kitchen-sink.html  single-field-multipart-form-data.html  single-field.html  single-input.html  success.html  text-input.html
test/flask/app/templates/: __init__.py  routes.py
test/flask/app/tests/: test_date_input.py  test_text_input.py  test_text_input_form.py  test_validators.py
test/flask/app/utilities/: __init__.py  routes.py
test/flask/components/: __init__.py  routes.py
test/flask/forms/: __init__.py  forms.py  routes.py
test/flask/templates/: __init__.py  routes.py
test/flask/utilities/: __init__.py  routes.py
test/forms/: __init__.py  routes.py
test/forms/test-templates/: example-form.html
test/playwright/: checkboxes.spec.ts  csrf.spec.ts  date-input-month.spec.ts  date-input.spec.ts  date-inputs.spec.ts  dates.spec.ts  fieldset.spec.ts  file-input.spec.ts  forms.spec.ts  kitchen-sink.spec.ts  lib.ts  radios.spec.ts  search.spec.ts  select.spec.ts  text-input.spec.ts  textarea.spec.ts
test/tasks/: package-lock.json  package.json  test-fixtures.mjs
test/templates/: __init__.py  routes.py
test/utilities/: __init__.py  routes.py
test/utilities/test-templates/: grid.html
tna_frontend_jinja/djangoforms/: forms.py  renderers.py  widgets.py
tna_frontend_jinja/templates/: email.html
tna_frontend_jinja/templates/components/: cookie-banner.html  records-list.html  (+2 more)
tna_frontend_jinja/wtforms/: __init__.py  fields.py  helpers.py  validators.py  widgets.py
(+91 files in other folders)
