[tool.poetry]
name = "tna-frontend-jinja"
version = "0.2.8"
description = ""
authors = ["Andrew Hosgood <andrew.hosgood@nationalarchives.gov.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
Flask-WTF = "^1.2.1"
deepmerge = "^1.1.1"
markupsafe = "^2.1.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
email-validator = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'