[tool.poetry]
name = "tna-frontend-jinja"
version = "0.0.1"
description = "TNA Frontend Jinja templates"
authors = ["Andrew Hosgood <andrew.hosgood@nationalarchives.gov.uk>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nationalarchives/tna-frontend-jinja"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Text Processing :: Markup :: HTML",
]
packages = [{include = "tna_frontend_jinja"}]
include = ["**/*.html"]
exclude = ["test"]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.1.0"
Flask-WTF = "^1.2.1"
deepmerge = "^1.1.1"
markupsafe = "^2.1.5"
email-validator = "^2.2.0"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = [
    "app/tests",
]